--- a/submissions/jatanassian/package.json
+++ b/submissions/jatanassian/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
+	"type": "commonjs",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "./node_modules/.bin/ts-node index.ts"
@@ -13,5 +14,8 @@
 	"devDependencies": {
 		"ts-node": "^10.9.1",
 		"typescript": "^5.2.2"
+	},
+	"dependencies": {
+		"csv-parse": "^5.5.0"
 	}
 }
