--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/barryhanna/file-io#readme",
   "dependencies": {
+    "chalk": "^4.1.2",
     "csv-parse": "^5.5.0"
   },
   "devDependencies": {
