--- a/submissions/mmaksi/package.json
+++ b/submissions/mmaksi/package.json
@@ -10,6 +10,7 @@
   "author": "Mark Maksi",
   "license": "ISC",
   "dependencies": {
+    "csv-parse": "^5.5.1",
     "csv-parser": "^3.0.0"
   }
 }
