--- a/submissions/elciosato/package.json
+++ b/submissions/elciosato/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "file-io": "tsx --watch src/index.ts"
+    "file-io": "tsx src/index.ts"
   },
   "keywords": [],
   "author": "",
