added modifications and added target/csv-spotify-data-logger-0.0.1-SNAPSHOT.jar

--- a/submissions/hanisntsolo/csv-spotify-data-logger/src/main/resources/application.properties
+++ b/submissions/hanisntsolo/csv-spotify-data-logger/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8080
+#/* You need to change the file path based on your system */
 path.to.csv=E:\\.code\\file-io\\submissions\\hanisntsolo\\csv-spotify-data-logger\\src\\main\\resources\\spotify-2023.csv
 # H2 Database Configuration
 spring.datasource.url=jdbc:h2:mem:spotifytable
