add the scripts build and start to build and run the project respectively

--- a/submissions/elciosato/package.json
+++ b/submissions/elciosato/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "file-io": "tsx src/index.ts"
+    "file-io": "tsx src/index.ts",
+    "build": "tsup src --out-dir build",
+    "start": "node build/index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.8.2",
+    "tsup": "^7.2.0",
     "tsx": "^3.13.0",
     "typescript": "^5.2.2"
   }
