--- a/submissions/ekady/package.json
+++ b/submissions/ekady/package.json
@@ -4,6 +4,7 @@
   "description": "submission file io",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
